Added new test in evaluator for reparenting, removed old comment

--- a/rollup/main/default/classes/RollupEvaluatorTests.cls
+++ b/rollup/main/default/classes/RollupEvaluatorTests.cls
@@ -254,4 +254,19 @@ private class RollupEvaluatorTests {
     System.assertEquals(true, eval.matches(opp), 'Should match since StageName has changed and amount > 20');
     System.assertNotEquals(true, eval.matches(secondOpp), 'Should not match, stage name unchanged even though amount > 20');
   }
+
+  @isTest
+  static void shouldReturnDualEvaluatorWhenCalcItemReparented() {
+    Opportunity opp = new Opportunity(Id = '0066g000000000000X', AccountId = '0016g000000000000X', Amount = 50);
+    Opportunity oldOpp = opp.clone(true, true);
+    oldOpp.AccountId = '0013g000000000000Z';
+
+    Rollup__mdt rollupMetadata = new Rollup__mdt(CalcItemWhereClause__c  ='Amount > 20');
+
+    Rollup.Evaluator eval = RollupEvaluator.getEvaluator(rollupMetadata, new Map<Id, SObject>{
+      oldOpp.Id => oldOpp
+    }, Opportunity.SObjectType);+
+
+    System.assertEquals(true, eval.matches(opp), 'Should match since StageName has changed and amount > 20');
+  }
 }
